# Spider-game

./: Cargo.toml  README.MD  README.md
.cargo/: config.toml
assets/: ldtk.ldtk
crates/sprite_animation/: Cargo.toml
crates/sprite_animation/sprite_animation_derive/: Cargo.toml
crates/sprite_animation/sprite_animation_derive/src/: lib.rs
crates/sprite_animation/src/: derive.rs  lib.rs  nodes.rs  plugins.rs  prelude.rs  systems.rs  tree.rs  utils.rs
crates/sprite_animation/src/nodes/: all_node.rs  any_node.rs  component_node.rs  match_node.rs  play_node.rs
crates/sprite_animation/src/systems/: init.rs  update.rs
crates/sprite_animation/src/utils/: chaining.rs  extra_uuid.rs
src/: bundles.rs  components.rs  data.rs  entities.rs  main.rs  plugins.rs  prefabs.rs  utils.rs
src/bundles/: physics.rs  player.rs  tilemap.rs  web.rs
src/components/: physics.rs  player.rs  tilemap.rs  web.rs
src/data/: clean_up.rs  cursor.rs  menu.rs  physics.rs  player.rs  tilemap.rs  web.rs
src/plugins/: audio.rs  base.rs  clean_up.rs  debug.rs  display.rs  menu.rs  physics.rs  player.rs  tilemap.rs  utils.rs
src/plugins/display/: apply_settings.rs  handle_keypress.rs  settings_events.rs
src/plugins/menu/: main_menu.rs
src/plugins/physics/: pre_physics.rs
src/plugins/player/: animation.md  animation.rs  jump.rs  lifecycle.rs  movement.rs  shoot_web.rs  spawn.rs
src/plugins/tilemap/: modify.rs  spawn.rs
src/plugins/utils/: bool_utils.rs
src/prefabs/: player.rs
src/utils/: state_helper.rs
tilemap/: ldtk.ldtk
(+1 files in other folders)
